tdf#154168 Export no transparency PNGs correctly

When bTranslucent was false the function would simply return, causing a
0 byte png. Now we just remove the alpha channel.

Change-Id: Ie2578185ac12fb38b6f1b674758e564721e3973f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152840
Tested-by: Jenkins
Reviewed-by: Paris Oplopoios <parisoplop@gmail.com>
(cherry picked from commit 7588c1f33cdaab58a6b84f4f4e75922c5d4a8a7f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152886
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit e691869486cd4ee4ee1dfb8f7a41440f7f6500fd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153081